chore: fix component
